_deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: academia-logika-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: academialogika.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: academia-logika-svc
                port:
                  number: 80
